client: update & delete

--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
     <div id="show-fighter-container"></div>
 
     <form id="create-fighter-form" >
-        <input type="text" name="firstName" placeholder="first name" />
-        <input type="text" name="lastName" placeholder="last name" />
-        <input type="text" name="fightingStyle" placeholder="fighting style" />
-        <input type="number" name="wins" placeholder="wins" />
-        <input type="number" name="losses" placeholder="losses" />
-        <input type="number" name="draws" placeholder="draws" />
+        <input type="text" name="firstName" placeholder="first name">
+        <input type="text" name="lastName" placeholder="last name">
+        <input type="text" name="fightingStyle" placeholder="fighting style">
+        <input type="number" name="wins" placeholder="wins">
+        <input type="number" name="losses" placeholder="losses">
+        <input type="number" name="draws" placeholder="draws">
 
-        <input type="submit" value="Create fighter"/>
+        <input type="submit" value="Create fighter">
     </form>
     
 </body>
